Replace deprecated Class.newInstance(). [#2956]